[gd_scene load_steps=7 format=2]

[ext_resource path="res://Graphics/fonts/AGENCYB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Graphics/fonts/AGENCYR.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/ModeSelect.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[node name="ModeSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.364706, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = -16.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 896.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Select research mode"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 896.0
margin_bottom = 491.0
custom_fonts/font = SubResource( 2 )
text = "There are 3 modes you can choose from:

- \"Best of 5\" where you are presented 5 biomes and you are judged on the relative amount of correct guesses you made.
- \"Best of 10\" which is the same with 10 biomes.
- \"Endless\" where your run ends as soon as to guess wrong two times in a row and you are judged on the absolute amount of correct guesses you made.

In any mode, the first 5 biomes are identical and fixed. So, you can see \" Best of 5\" as your training mode. Any further biomes are completely random... wherever research might take you..."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 541.0
margin_right = 896.0
margin_bottom = 591.0
custom_constants/separation = 30
alignment = 1

[node name="FiveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 3.0
margin_right = 203.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 3 )
text = "Best of 5"

[node name="TenButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 233.0
margin_right = 433.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 3 )
text = "Best of 10"

[node name="EndlessButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 463.0
margin_right = 663.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 3 )
text = "Endless"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 693.0
margin_right = 893.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 3 )
text = "Back"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FiveButton" to="." method="_on_FiveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TenButton" to="." method="_on_TenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EndlessButton" to="." method="_on_EndlessButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
